Small bugfix with cache loading. Todo: Utilize mass meme request

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button onclick="loadMeme()" class="nextMemeBtn">Next Meme!</button>
         </div>
 
-        <textarea class="weblink">https://randommemegenerator.com</textarea>
+        <textarea class="weblink">https://jandestiny.github.io/randommemegen/</textarea>
 
         <div class="btnContainer">
             <button class="shareBtn">Share our page!</button>
